# Azure-Monitor-AI-Analytics

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  ml-training.yml  terraform-apply.yml  terraform-plan.yml
dashboards/grafana/: infrastructure-health.json
docker/: docker-compose.yml
docker/services/: api.Dockerfile
docs/: SETUP.md  api-reference.md  architecture.md  text.md
kql/queries/aks/: pod-failures.kql
kql/queries/security/: failed-logins.kql
kql/queries/vm-insights/: failed-logins.kql  performance.kql  pod-failures.kql
scripts/: deploy-container-app.sh  deploy.sh  setup-azure.sh
src/api/: dependencies.py  main.py
src/api/routers/: compliance.py  logs.py
src/connectors/: azure_monitor.py
src/langchain_integration/: kql_chain.py  log_analyzer.py
terraform/: main.tf  outputs.tf  providers.tf  variables.tf
terraform/environments/dev/: terraform.tfvars
terraform/modules/aks/: main.tf  output.tf  variables.tf
terraform/modules/ampls/: dns-zones.tf  main.tf  outputs.tf  private-endpoints.tf  variables.tf
terraform/modules/container-apps/: main.tf  outputs.tf  variables.tf
terraform/modules/key-vault/: main.tf  outputs.tf  variables.tf
terraform/modules/log-analytics/: data-collection-rules.tf  main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/networking/: main.tf  outputs.tf  variables.tf
terraform/modules/storage/: main.tf  outputs.tf  variables.tf
terraform/modules/vm-insights/: main.tf  variables.tf  (+1 more)
tests/integration/: test_azure_monitor.py
tests/unit/: test_kql_generator.py
