[tool.poetry]
name = "azure-log-analytics-ai"
version = "0.1.0"
description = "Enterprise AI-Powered Log Analytics for Azure"
authors = ["Your Name <your.email@company.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Azure SDKs
azure-identity = "^1.15.0"
azure-monitor-query = "^1.3.0"
azure-mgmt-loganalytics = "^13.0.0"
azure-mgmt-monitor = "^6.0.2"
azure-mgmt-resource = "^23.0.1"
azure-keyvault-secrets = "^4.7.0"
azure-storage-blob = "^12.19.0"

# AI/ML
langchain = "^0.1.0"
langchain-community = "^0.0.13"
langchain-huggingface = "^0.0.1"
sentence-transformers = "^2.2.2"
transformers = "^4.36.0"
huggingface-hub = "^0.20.0"

# Data processing
pandas = "^2.1.4"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"

# Cache & Queue
redis = "^5.0.1"
celery = {extras = ["redis"], version = "^5.3.4"}

# Utilities
python-dotenv = "^1.0.0"
httpx = "^0.26.0"
tenacity = "^8.2.3"
prometheus-client = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.12.1"
ruff = "^0.1.9"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"